# job-market-insight-lab

./: .gitignore  README.md  START.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
dashboard/public/data/: jobs.json
dashboard/src/: style.css
dashboard/src/features/jobs/components/: CollectPanel.vue  CollectResult.vue  CrawlerLessons.vue  FiltersPanel.vue  HeroSummary.vue  HighlightText.vue  JobDetail.vue  JobList.vue  ManualImportPanel.vue  StatsCharts.vue
dashboard/src/services/: apiClient.js  jobsApi.js  manualImport.js  staticJobs.js
dashboard/src/utils/: date.js  exporters.js  formatters.js
dashboard/src/views/: DashboardView.vue
src/job_collector/: api.py  cli.py  config.py  crawler_104.py  export_static.py  manual_import.py  models.py  storage.py
