[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-market-insight-lab"
version = "0.2.0"
description = "Personal job market insight dashboard with responsible import and diagnostics"
requires-python = ">=3.10"
dependencies = [
  "playwright==1.49.1",
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.2",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4"
]

[project.scripts]
job-market-lab = "job_collector.cli:main"
job-market-lab-api = "job_collector.api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
